# telegram-bot

./: .mise.toml  Cargo.toml  Dockerfile  Makefile  pyproject.toml
.github/workflows/: main.yml
chart/templates/: bot.yaml  configmap.yaml  secret.yaml
src/: lib.rs  main.rs
src/telegram_bot/: bot.py  config.py  main.py  poll.py  wostream.py
