[project]
requires-python = "==3.13.*"
name = "telegram-bot"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==1.1.2",
    "bs-nats-updater ==2.0.7",
    "httpx ==0.28.*",
    "python-telegram-bot ==22.5",
    "python-levenshtein ==0.27.1",
    "sentry-sdk ==2.40.*",
    "timhatdiehandandermaus-sdk ==6.0.0",
]

[dependency-groups]
dev = [
    "mypy ==1.18.*",
    "pytest >=8, <9",
    "ruff ==0.14.0",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }
timhatdiehandandermaus-sdk = { index = "internal" }

[build-system]
requires = ["uv_build==0.8.*"]
build-backend = "uv_build"

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
