[project]
requires-python = "==3.14.*"
name = "telegram-bot"
version = "1.0.0"
description = ""
authors = [{ name = "BlindfoldedSurgery", email = "team@blindfolded.surgery" }]
classifiers = [
    "Private :: Do Not Upload",
    "License :: OSI Approved :: MIT License",
]

dependencies = [
    "bs-config [dotenv] ==3.4.0",
    "bs-nats-updater ==3.0.0",
    "httpx ==0.28.*",
    "python-telegram-bot ==22.5",
    "sentry-sdk ==2.48.*",
    "timhatdiehandandermaus-sdk ==6.1.0",
]

[dependency-groups]
dev = [
    "mypy ==1.19.*",
    "pytest ==9.0.*",
    "ruff ==0.14.9",
]

[[tool.uv.index]]
name = "internal"
url = "https://pypi.bjoernpetersen.net/simple"
explicit = true

[tool.uv.sources]
bs-config = { index = "internal" }
bs-nats-updater = { index = "internal" }
timhatdiehandandermaus-sdk = { index = "internal" }

[build-system]
requires = ["uv_build==0.9.*"]
build-backend = "uv_build"

[tool.pytest]
strict = true
addopts = [
    "--import-mode=importlib",
]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "FURB",
    "G",
    "I001",
    "LOG",
    "PTH",
    "Q",
    "TC001",
    "TC002",
    "TC003",
    "TC004",
    "TC005",
    "UP",
]
ignore = [
    # redundant-open-modes
    "UP015",
]
